[package]
name = "front-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {  version = "0.7.1" , features = ["macros"]}
axum-extra = "0.9.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive", ] }
serde_json = "1.0.65"
log = "0.4.20"
tower-http = { version = "0.5.0", features = ["limit"] }
axum_typed_multipart = "0.11.0"
uuid = {  version = "1.6.1", features = ["serde", "v4"] }
image = "0.24.7"
imageproc = "0.23.0"
anyhow = "1.0.44"
chrono = { version =  "0.4.31", features = ["serde"] }
clap = "4.4.10"